add exception for job post /userpaymentstatus